# simplified-prolog

./: Cargo.toml  README.md
src/: lib.rs
src/prolog/: errors.rs  expr.rs  literal.rs  mod.rs  parser.rs  scanner.rs  token.rs  token_types.rs
