[package]
name = "simplified-prolog"
version = "0.1.0"
authors = ["robjsliwa <robjsliwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plib"
path = "src/lib.rs"

[[bin]]
name = "prolog"
path = "src/bin/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0"
lazy_static = "1.4.0"
regex = "1"